<resources>
    <string name="app_name">GlobeTrotterChat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_image" />
    <string name="type_a_message" />
    <string name="testTextDE">Hier steht jetzt mal was richtig Langes, das in 2 Zeilen reichen soll. Macht er das automatisch?</string>
    <string name="testTextEN">Here is something really long that should be enough in 2 lines. Does it do that automatically?</string>
    <string name="timestamp">00:00</string>
    <string name="visibility">Visibility</string>
    <string name="type_here">type here…</string>
    <string name="send">Send</string>
    <string name="friendname">friendName</string>
    <string name="hello">HELLO</string>
    <string name="loggedinusername">LoggedInUserName</string>
    <string name="add_friends">add Friends</string>
    <string name="chats">Chats</string>
    <string name="friendshub">FriendsHub</string>
    <string name="settings">Settings</string>
    <string name="nickname">Nickname</string>
    <string name="button_back">Button Back</string>
    <string name="save_profile">Save Profile</string>
    <string name="native_language">Native Language</string>

    //String-Array for Spinner in signup Native Language

    <string-array name="native_language_options">
        <item>Englisch - en</item>
        <item>Mandarin-Chinesisch - zh-CN</item>
        <item>Hindi - hi</item>
        <item>Spanisch - es</item>
        <item>Französisch - fr</item>
        <item>Arabisch - ar</item>
        <item>Bengali - bn</item>
        <item>Russisch - ru</item>
        <item>Portugiesisch - pt</item>
        <item>Urdu - ur</item>
        <item>Indonesisch - id</item>
        <item>Deutsch - de</item>
        <item>Japanisch - ja</item>
        <item>Swahili - sw</item>
        <item>Türkisch - tr</item>
        <item>Italienisch - it</item>
        <item>Polnisch - pl</item>
        <item>Niederländisch - nl</item>
        <item>Thai - th</item>
        <item>Gujarati - gu</item>
    </string-array>

</resources>