<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_chatOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:foregroundGravity="right"
        android:padding="8dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="2dp"
        app:cardMaxElevation="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_chatOut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/testTextDE"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_max="270dp" />

            <TextView
                android:id="@+id/tv_timeStamp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="2dp"
                android:text="@string/timestamp"
                android:textSize="9sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="SmallSp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/iv_visibilityOut"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:clickable="true"
        android:contentDescription="@string/visibility"
        android:focusable="true"
        android:foregroundGravity="center"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/cv_chatOut"
        app:layout_constraintEnd_toStartOf="@+id/cv_chatOut"
        app:layout_constraintTop_toTopOf="@+id/cv_chatOut"
        app:srcCompat="@drawable/ic_visibility" />

    <TextView
        android:id="@+id/tv_optionalOut"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:text="@string/testTextEN"
        android:textSize="12sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/cv_chatOut"
        app:layout_constraintTop_toBottomOf="@+id/cv_chatOut" />

</androidx.constraintlayout.widget.ConstraintLayout>
