<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_chatIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:foregroundGravity="left"
        android:padding="8dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="2dp"
        app:cardMaxElevation="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvChatIn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="8dp"
                android:textSize="15sp"
                android:text="@string/testTextDE"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_max="270dp" />

            <TextView
                android:id="@+id/tvTimeStamp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="6dp"
                android:text="@string/timestamp"
                android:textSize="9sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvChatIn"
                tools:ignore="SmallSp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/btn_set_visibility_in"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:alpha="0.3"
        android:clickable="true"
        android:contentDescription="@string/visibility"
        android:focusable="true"
        android:foregroundGravity="center"
        android:paddingStart="6dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/cv_chatIn"
        app:layout_constraintStart_toEndOf="@+id/cv_chatIn"
        app:layout_constraintTop_toTopOf="@+id/cv_chatIn"
        app:srcCompat="@drawable/ic_translate" />

    <TextView
        android:id="@+id/tv_optionalIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="6dp"
        android:text="@string/testTextEN"
        android:textSize="13sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/cv_chatIn"
        app:layout_constraintTop_toBottomOf="@+id/cv_chatIn"
        app:layout_constraintWidth_max="260dp" />


</androidx.constraintlayout.widget.ConstraintLayout>